<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2C2C2C">

    <com.currency.crypto.core.library.CustomImageButton
        android:id="@+id/buttonBack"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:padding="6dp"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tradeRatesText"
        style="@style/BasicText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:fontFamily="@font/lexend_deca_bold"
        android:text="@string/traderates"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/buttonBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/buttonBack" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="25dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tradeRatesText">

        <LinearLayout
            android:id="@+id/introductionLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:foreground="?android:attr/selectableItemBackground"
            android:background="@drawable/bg_introduction"
            android:orientation="vertical"
            android:padding="20dp"
            app:cardCornerRadius="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lexend_deca_bold"
                android:text="@string/introduction"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lexend_deca_regular"
                    android:text="@string/introduction_description"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_technical_analysis"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginVertical="10dp"
            android:layout_weight="1"
            android:foreground="?android:attr/selectableItemBackground"
            android:background="@drawable/bg_technical_analysis"
            android:orientation="vertical"
            android:padding="20dp"
            app:cardCornerRadius="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lexend_deca_bold"
                android:text="@string/technical_analysis"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lexend_deca_regular"
                    android:text="@string/technical_analysis_description"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutCryptocurrencies"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/bg_cryptocurrencies"
            android:orientation="vertical"
            android:foreground="?android:attr/selectableItemBackground"
            android:padding="20dp"
            app:cardCornerRadius="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lexend_deca_bold"
                android:text="@string/cryptocurrencies"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lexend_deca_regular"
                    android:text="@string/crypto_currency_description"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>