<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg">

    <com.currency.crypto.core.library.CustomImageButton
        android:id="@+id/buttonBack"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:padding="6dp"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tradeRatesText"
        style="@style/BasicText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:fontFamily="@font/lexend_deca_bold"
        android:text="@string/traderates"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/buttonBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/buttonBack" />

    <TextView
        android:id="@+id/titleText"
        style="@style/BasicText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/lexend_deca_bold"
        android:text="@string/_technical_analysis"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tradeRatesText" />

    <androidx.cardview.widget.CardView
        android:id="@+id/fundamentals_Layout"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        android:padding="20dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintTop_toBottomOf="@+id/titleText">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_fundamentals"
            android:fontFamily="@font/lexend_deca_regular"
            android:gravity="center"
            android:scaleX="1.02"
            android:scaleY="1.02"
            android:text="@string/fundamentals"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/simpleIndicatorsLayout"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintTop_toBottomOf="@+id/fundamentals_Layout">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_simple_indicators"
            android:fontFamily="@font/lexend_deca_regular"
            android:gravity="center"
            android:padding="20dp"
            android:scaleX="1.02"
            android:scaleY="1.02"
            android:text="@string/simple_indicators"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/conceptOfTrendsLayout"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintTop_toBottomOf="@+id/simpleIndicatorsLayout">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_concept_of_trends"
            android:fontFamily="@font/lexend_deca_regular"
            android:gravity="center"
            android:padding="20dp"
            android:scaleX="1.02"
            android:scaleY="1.02"
            android:text="@string/concept_of_trends"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>