<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_menu">

    <TextView
        android:id="@+id/tradeRatesText"
        style="@style/BasicText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lexend_deca_extra_bold"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/traderates"
        android:textSize="50dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="20dp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/buttonStart"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:background="@color/white"
        android:layout_marginBottom="60dp"
        app:cardCornerRadius="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_gravity="center"
            style="@style/BasicText"
            android:textColor="#180689"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:background="@color/white"
            android:text="@string/start"
            android:textSize="16sp" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/menuText"
        android:layout_width="260dp"
        android:layout_height="95dp"
        android:layout_marginBottom="30dp"
        android:backgroundTint="#73000000"
        app:cardCornerRadius="12dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_marginHorizontal="30dp"
            style="@style/BasicText"
            android:text="@string/menu_text"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>